tests/samples/negative/functions/unsafe_fn_call_required.ax
module unsafe_fn_call_required;

unsafe fn read_raw(value: *const i32) -> i32 {
    return *value;
}

fn main() -> i32 {
    var value: i32 = 1;
    return read_raw(&value);
}
